# lug

./: .flake8  .gitignore  404.html  CNAME  COPYRIGHT.md  README.md  index.html  pyproject.toml  pytest.ini
.circleci/: config.yml
.github/workflows/: ci.yml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/getting-started/: adding-lug-to-a-function.md  create-a-hybrid-function.md  dependencies-and-lug.md  docker-sidecar.md  installation.md  running-lug-remotely.md  using-files.md
docs/docs/reference/: redirected-system-calls.md  supported-docker-images.md
docs/docs/troubleshooting/: common-errors.md
getting-started/adding-lug-to-a-function/: index.html
getting-started/create-a-hybrid-function/: index.html
getting-started/dependencies-and-lug/: index.html
getting-started/docker-sidecar/: index.html
getting-started/installation/: index.html
getting-started/running-lug-remotely/: index.html
getting-started/using-files/: index.html
reference/redirected-system-calls/: index.html
reference/supported-docker-images/: index.html
search/: search_index.json
src/lug/: __init__.py  constants.py  containers.py  lug.py  module_detection.py  shell.py
test/: base.py  conftest.py  multiple_imports_helper.py  test_indirect_import.py  test_mount.py  test_multiple_calls.py  test_sanity.py
test/lug_core/: test_module_registration.py
test/test_module_registration/: test_deep_vs_shallow.py  test_module_detection.py  test_package_with_dependency.py  test_simple_package.py
test/test_os_system/: indirect_import_helper_os_system.py  indirect_import_helper_system.py  test_from_import.py  test_import_os.py
test/test_popular_packages/: test_numpy_pandas.py  test_pytorch.py  test_sklearn.py
test/test_remote/: test_remote_execution.py
test/test_remote_execution/: remote_import_helper.py  test_remote_cmd_line_args.py  test_remote_execution.py
test/test_subprocess_popen/: indirect_import_helper_popen.py  indirect_import_helper_subprocess_popen.py  test_from_import.py  test_import_subprocess.py
test/test_subprocess_run/: indirect_import_helper_run.py  indirect_import_helper_subprocess_run.py  test_from_import.py  test_import_subprocess.py
test/test_system_call_patching/: base.py  multiple_imports_helper.py  test_indirect_import.py
test/test_system_call_patching/test_os_system/: test_from_import.py  test_import_os.py
test/test_system_call_patching/test_relative_import_patching/: subprocess_run.py
test/test_system_call_patching/test_subprocess_popen/: test_from_import.py  test_import_subprocess.py
test/test_system_call_patching/test_subprocess_run/: indirect_import_helper_run.py  test_from_import.py  test_import_subprocess.py
troubleshooting/common-errors/: index.html
